--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-@import url('http://fonts.cdnfonts.com/css/filson-pro?styles=96090');
+@import url("http://fonts.cdnfonts.com/css/filson-pro?styles=96090");
 
 .body {
   line-height: inherit;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Filson Pro', sans-serif;
+  font-family: "Filson Pro", sans-serif;
   margin: 0;
 }
 .hr {
@@ -55,6 +55,8 @@ table {
 button,
 select {
   text-transform: none;
+  appearance: none;
+  border: none;
 }
 
 progress {
@@ -150,15 +152,28 @@ video {
 .relative {
   position: relative;
   --tw-bg-opacity: 1;
-  background-color: rgb(30 67 90/var(--tw-bg-opacity));
+  background-color: rgb(30 67 90 / var(--tw-bg-opacity));
 }
 
-.relative:focus{
+.relative:focus {
   position: relative;
   --tw-bg-opacity: 1;
   background-color: grey;
 }
 
+button.selected {
+  position: relative;
+  --tw-bg-opacity: 1;
+  background-color: grey;
+}
+
+button {
+  cursor: pointer;
+}
+
+button[disabled] {
+  opacity: 0.4;
+}
 
 .inset-0 {
   bottom: 0;
@@ -392,8 +407,7 @@ video {
 .bg-background {
   --tw-bg-opacity: 1;
   background-color: rgb(0 145 175 / var(--tw-bg-opacity));
-  font-family: 'Filson Pro', sans-serif;
-  
+  font-family: "Filson Pro", sans-serif;
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -542,8 +556,7 @@ video {
     width: 50%;
   }
 
-.togglebuttoon{
-  background-color: brown;
-}
-
+  .togglebuttoon {
+    background-color: brown;
+  }
 }
